# hapbin

./: .gitignore  README.md
data/: bifurcation_pair.hap  bifurcation_pair.map  make_map.py  test_chr22.tar.lzma
src/: CMakeLists.txt  argparse.hpp  calcmpiselect.hpp  calcnompiselect.hpp  calcselect.hpp  config.h.in  ehh.hpp  ehhfinder-impl.hpp  ehhfinder.cpp  ehhfinder.hpp  ehhpairfinder.cpp  ehhpairfinder.hpp  hapbin.cpp  hapbin.hpp  hapmap.cpp  hapmap.hpp  ihs.cpp  ihs_mpi.cpp  ihsfinder-impl.hpp  ihsfinder.cpp  ihsfinder.hpp  ihspairfinder.cpp  ihspairfinder.hpp  ihspairjob.cpp  ihspairjob.hpp  main-conv.cpp  main-ehh.cpp  main-ehh2.cpp  main-ihs.cpp  main-ihs2.cpp  main-ihs2sub.cpp  main-xpehh.cpp  popkey.cpp  popkey.hpp  timings.txt  xpehh.cpp  xpehh_mpi.cpp
src/MPIRPC/: CMakeLists.txt  MPIRPCConfig.cmake.in  common.hpp  manager.hpp  mpitype.cpp  mpitype.hpp  objectwrapper.cpp  orderedcall.hpp  reduce.hpp
src/MPIRPC/tests/: CMakeLists.txt  mpirpctest.cpp  mpirpctest.hpp
src/cmake/: GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in
src/mpirpc/: CMakeLists.txt  common.hpp  lambda.hpp  manager.cpp  manager.hpp  mpitype.cpp  mpitype.hpp  objectwrapper.hpp  orderedcall.hpp  parameterstream.cpp  parameterstream.hpp  reduce.cpp  reduce.hpp
src/tests/: CMakeLists.txt  argparsetest.cpp  argparsetest.hpp  benchmarktests.cpp  benchmarktests.hpp  hapbintest.cpp  hapbintest.hpp  ihs.txt  test.map
tools/: cut.sh  filter_pop.py  join.sh  logs.sh  make_map.py  processdata.hapbin.sh  processdata.selscan.sh  random.sh  stats.nounits.sh  stats.sh  submit.sh
