add_definitions(${Qt5Core_DEFINITIONS} ${Qt5Core_EXECUTABLE_COMPILE_FLAGS})
set(CMAKE_AUTOMOC ON)
include_directories(${Qt5Core_INCLUDE_DIRS} ${Qt5Test_INCLUDE_DIRS} ${Qt5Concurrent_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
add_definitions(${Qt5Test_DEFINES})
set(CMAKE_EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})

set(hapbinTest_SRCS hapbintest.cpp)
add_executable(hapbinTest ${hapbinTest_SRCS})
add_test(hapbinTest hapbinTest)
target_link_libraries(hapbinTest mpirpc hapbin ${Qt5Core_LIBRARIES} ${Qt5Test_LIBRARIES} ${MPI_CXX_LIBRARIES})

set(benchmarkTests_SRCS benchmarktests.cpp)
add_executable(benchmarkTests ${benchmarkTests_SRCS})
add_test(benchmarkTests benchmarkTests)
target_link_libraries(benchmarkTests mpirpc hapbin ${Qt5Core_LIBRARIES} ${Qt5Test_LIBRARIES} ${MPI_CXX_LIBRARIES})

set(argparseTest_SRCS argparsetest.cpp)
add_executable(argparseTest ${argparseTest_SRCS})
add_test(argparseTest argparseTest)
target_link_libraries(argparseTest ${Qt5Core_LIBRARIES} ${Qt5Test_LIBRARIES})
